cmake_minimum_required(VERSION 3.15)
project(parser)

set(CMAKE_CXX_STANDARD 14)

include_directories(src)

add_executable(parser
        src/main.cpp
        src/node.cpp
        src/node.h
        src/parser.cpp
        src/parser.h
        src/rule1.cpp
        src/rule1.h
        src/rule10.cpp
        src/rule10.h
        src/rule11.cpp
        src/rule11.h
        src/rule12.cpp
        src/rule12.h
        src/rule13.cpp
        src/rule13.h
        src/rule14.cpp
        src/rule14.h
        src/rule14_.cpp
        src/rule14_.h
        src/rule15.cpp
        src/rule15.h
        src/rule16.cpp
        src/rule16.h
        src/rule17.cpp
        src/rule17.h
        src/rule18.cpp
        src/rule18.h
        src/rule19.cpp
        src/rule19.h
        src/rule2.cpp
        src/rule2.h
        src/rule20.cpp
        src/rule20.h
        src/rule20_.cpp
        src/rule20_.h
        src/rule21.cpp
        src/rule21.h
        src/rule21_.cpp
        src/rule21_.h
        src/rule22.cpp
        src/rule22.h
        src/rule22_.cpp
        src/rule22_.h
        src/rule23.cpp
        src/rule23.h
        src/rule23_.cpp
        src/rule23_.h
        src/rule24.cpp
        src/rule24.h
        src/rule24_.cpp
        src/rule24_.h
        src/rule25.cpp
        src/rule25.h
        src/rule26.cpp
        src/rule26.h
        src/rule27.cpp
        src/rule27.h
        src/rule28.cpp
        src/rule28.h
        src/rule28_.cpp
        src/rule28_.h
        src/rule29.cpp
        src/rule29.h
        src/rule2_.cpp
        src/rule2_.h
        src/rule3.cpp
        src/rule3.h
        src/rule4.cpp
        src/rule4.h
        src/rule5.cpp
        src/rule5.h
        src/rule6.cpp
        src/rule6.h
        src/rule7.cpp
        src/rule7.h
        src/rule8.cpp
        src/rule8.h
        src/rule8_.cpp
        src/rule8_.h
        src/rule9.cpp
        src/rule9.h
        src/Token.cpp
        src/Token.h)
