cmake_minimum_required(VERSION 3.15)
project(src)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(src
        main.cpp
        node.cpp
        node.h
        parser.cpp
        parser.h
        rule1.cpp
        rule1.h
        rule10.cpp
        rule10.h
        rule11.cpp
        rule11.h
        rule12.cpp
        rule12.h
        rule13.cpp
        rule13.h
        rule14.cpp
        rule14.h
        rule14_.cpp
        rule14_.h
        rule15.cpp
        rule15.h
        rule16.cpp
        rule16.h
        rule17.cpp
        rule17.h
        rule18.cpp
        rule18.h
        rule19.cpp
        rule19.h
        rule2.cpp
        rule2.h
        rule20.cpp
        rule20.h
        rule20_.cpp
        rule20_.h
        rule21.cpp
        rule21.h
        rule21_.cpp
        rule21_.h
        rule22.cpp
        rule22.h
        rule22_.cpp
        rule22_.h
        rule23.cpp
        rule23.h
        rule23_.cpp
        rule23_.h
        rule24.cpp
        rule24.h
        rule24_.cpp
        rule24_.h
        rule25.cpp
        rule25.h
        rule26.cpp
        rule26.h
        rule27.cpp
        rule27.h
        rule28.cpp
        rule28.h
        rule28_.cpp
        rule28_.h
        rule29.cpp
        rule29.h
        rule2_.cpp
        rule2_.h
        rule3.cpp
        rule3.h
        rule4.cpp
        rule4.h
        rule5.cpp
        rule5.h
        rule6.cpp
        rule6.h
        rule7.cpp
        rule7.h
        rule8.cpp
        rule8.h
        rule8_.cpp
        rule8_.h
        rule9.cpp
        rule9.h
        Token.cpp
        Token.h)
